fix: divider and button not showing

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -21,7 +21,7 @@ body {
 
 .text {
   color: #1f2128;
-  weight: 400;
+  font-weight: 400;
   font-size: 14px;
   line-height: 18.2px;
   margin-top: 6px;
@@ -50,12 +50,10 @@ body {
 
 /** DIVIDER */
 .divider {
-  border: 0;
   border-bottom: 0.7px solid #cdcdcd;
   width: 340px;
   height: 0px;
-  border: 0.7px 0px 0px 0px;
-  opacity: 0px;
+  opacity: 1;
   margin: 0 auto;
   margin-top: 10px;
   margin-bottom: 10px;
@@ -67,7 +65,7 @@ body {
   margin: 0 auto;
 }
 
-.button {
+.footer > .button {
   cursor: pointer;
   background-color: #ffce22;
   width: 340px;
@@ -78,7 +76,7 @@ body {
   border-radius: 4px;
 }
 
-.button:hover {
+  .button:hover {
   background: #ffd84d;
 }
 
